unpackaged/main/default/objects/NCM_Content_Version__c/NCM_Content_Version__c.object-meta.xml
<CustomObject>
    <label>NCM Content Adaptation</label>
    <nameField>
        <label>NCM Content Adaptation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NCM Content Adaptations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>