unpackaged/main/default/objects/NCM_Content_Version__c/fields/Adaptation_Number__c.field-meta.xml
<CustomField>
    <fullName>Adaptation_Number__c</fullName>
    <displayFormat>NCA - {000000}</displayFormat>
    <label>Adaptation Number</label>
    <type>AutoNumber</type>
</CustomField>