unpackaged/main/default/objects/NCM_Content_Version__c/fields/Agenda__c.field-meta.xml
<CustomField>
    <fullName>Agenda__c</fullName>
    <label>Agenda Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Sent for Instructor Approval</fullName>
            </value>
            <value>
                <fullName>Sent for Client Approval</fullName>
            </value>
            <value>
                <fullName>In-Production</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>