unpackaged/main/default/objects/NCM_Content_Version__c/fields/Content_File_Path__c.field-meta.xml
<CustomField>
    <fullName>Content_File_Path__c</fullName>
    <inlineHelpText>Enter in URL of file location - this location will have the same security restrictions as the target location.</inlineHelpText>
    <label>Content File Path</label>
    <type>Url</type>
</CustomField>