unpackaged/main/default/objects/NCM_Content_Version__c/fields/Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>Duration_Days__c</fullName>
    <label>Duration (Days)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Duration_Days</valueSetName>
    </valueSet>
</CustomField>