unpackaged/main/default/objects/NCM_Content_Version__c/fields/Exam_Status__c.field-meta.xml
<CustomField>
    <fullName>Exam_Status__c</fullName>
    <label>Exam Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Sent for Instructor Approval</fullName>
            </value>
            <value>
                <fullName>Sent for Client Approval</fullName>
            </value>
            <value>
                <fullName>In-Production</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>