unpackaged/main/default/objects/NCM_Content_Version__c/fields/NCM_Content__c.field-meta.xml
<CustomField>
    <fullName>NCM_Content__c</fullName>
    <label>NCM Content</label>
    <referenceTo>NCM_Content__c</referenceTo>
    <relationshipLabel>NCM Content Adaptations</relationshipLabel>
    <relationshipName>NCM_Content_Versions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>