unpackaged/main/default/objects/NCM_Content_Version__c/fields/NCM_Content_Request__c.field-meta.xml
<CustomField>
    <fullName>NCM_Content_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NCM Content Request</label>
    <referenceTo>NCM_Content_Request__c</referenceTo>
    <relationshipName>NCM_Content_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>