unpackaged/main/default/objects/NCM_Content_Version__c/fields/NCMContentAdaptationID_18__c.field-meta.xml
<CustomField>
    <fullName>NCMContentAdaptationID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NCMContentAdaptationID (18)</label>
    <type>Text</type>
</CustomField>