unpackaged/main/default/objects/NCM_Content_Version__c/fields/PPT_Status__c.field-meta.xml
<CustomField>
    <fullName>PPT_Status__c</fullName>
    <label>PPT Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Sent for Instructor Approval</fullName>
            </value>
            <value>
                <fullName>Sent for Client Approval</fullName>
            </value>
            <value>
                <fullName>In Production</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>