unpackaged/main/default/objects/NCM_Content_Version__c/fields/Requester__c.field-meta.xml
<CustomField>
    <fullName>Requester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who has requested the content/new content version</inlineHelpText>
    <label>Requester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NCM_Content_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>