unpackaged/main/default/objects/NCM_Content_Version__c/fields/Required_Content_Assets__c.field-meta.xml
<CustomField>
    <fullName>Required_Content_Assets__c</fullName>
    <label>Required Content Assets</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>