unpackaged/main/default/objects/NCM_Content_Version__c/fields/USB_Status__c.field-meta.xml
<CustomField>
    <fullName>USB_Status__c</fullName>
    <label>USB Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Sent for Instructor Approval</fullName>
            </value>
            <value>
                <fullName>Sent for Client Approval</fullName>
            </value>
            <value>
                <fullName>In Production</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>