unpackaged/main/default/objects/NCM_Content_Version__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NCMContentVersionID_18__c</columns>
    <columns>NAME</columns>
    <columns>NCM_Content__c</columns>
    <columns>USB_Status__c</columns>
    <columns>Workbook_Status__c</columns>
    <columns>PPT_Status__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>